<resources>
    <string name="app_name">EcoApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_map">Mapa</string>
    <string name="title_more">Otros</string>
    <string name="title_messages">Mensajes</string>
    <string name="title_settings">Ajustes</string>
    <string name="title_help">Ayuda</string>
    <string name="title_contact">Contacto</string>
    <string name="title_about">Acerca de</string>
    <string name="title_recycle">Recycle</string>

    <!--Strings of Contact-->
    <string name="name">Nombre</string>
    <string name="subject">Asunto</string>
    <string name="email">Correo electrónico</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>

    <string name="title_recycle_detail">Detalles del Reciclaje</string>

    <string name="title_settings_detail">Detalles de Ajustes</string>

</resources>