<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Item de menú para la opción "Inicio" -->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <!-- Item de menú para la opción "Reciclar" -->
    <item
        android:id="@+id/navigation_recycle"
        android:icon="@drawable/baseline_recycling_24"
        android:title="@string/title_recycle" />

    <!-- Item de menú para la opción "Mapa" -->
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_map" />

    <!-- Item de menú para la opción "Notificaciones" -->
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/title_notifications" />

    <!-- Item de menú para la opción "Más" -->
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/baseline_more_horiz_24"
        android:title="@string/title_more" />

</menu>
